--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
-    "chart.js": "^4.4.2",
     "chartist": "^1.3.0",
-    "lodash": "^4.17.21",
+    "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
