--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
     "chartist": "^1.3.0",
+    "hex-to-rgba": "^2.0.1",
     "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
