--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.7.8",
     "chartist": "^1.3.0",
     "hex-to-rgba": "^2.0.1",
     "html-react-parser": "^5.1.10",
